Upadte to Index page
Contact button removed

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 	   				<span>Flutter Developer</span>
 	   			</p>
 
-	   			<a class="button stroke smoothscroll" href="#" title="">Contact</a>
-
+<!-- 	   			<a class="button stroke smoothscroll" href="#" title="">Contact</a>
+ -->
 	   		</div>  
    			
    		</div>   		 		
