Removed unecssary comments

--- a/index.html
+++ b/index.html
@@ -38,30 +38,7 @@
 	<!-- header 
    ================================================== -->
    <header>   	
-   	<!-- <div class="row">
-
-   		<div class="top-bar">
-   			<a class="menu-toggle" href="#"><span>Menu</span></a>
-
-	   		<div class="logo">
-		         <a href="index.html">Ratnesh</a>
-		      </div>		      
-
-		   	<nav id="main-nav-wrap">
-					<ul class="main-navigation">
-						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
-						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
-					</ul>
-				</nav>    		
-   		</div> 
-\   		
-   	</div>  -->
-	<!-- /row --> 		
+   		
    </header> <!-- /header -->
 
 	<!-- intro section
@@ -109,6 +86,17 @@
 	<div id="preloader"> 
     	<div id="loader"></div>
    </div>   	
+	   
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RZW4JK3MKT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-RZW4JK3MKT');
+</script>
+
    </footer>  
 
  
